blocks/profile.css
.profile {
  display: flex;
  flex-direction: row;
  margin-bottom: 50px;
}

.profile__avatar {
  border-radius: 50%;
  width: 120px;
  height: 120px;
}

.profile__info {
  max-width: 414px;
  margin: 18px 0 25px 30px;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: auto;
}
.profile__info-name {
  font-family: Inter;
  font-size: 42px;
  font-weight: 500;
  margin: 0 0 16px;
  grid-column: 1/3;
  grid-row: 1;
  width: 373px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.profile__info-description {
  font-family: Inter;
  font-size: 18px;
  font-weight: 400;
  margin: 0;
  grid-column: 1/4;
  grid-row: 2;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.profile__edit-button {
  background-image: url(../images/edit.png);
  border: 1px solid #ffffff;
  width: 24px;
  height: 24px;
  margin: 16px 0 16px 24px;
  background-color: transparent;
  cursor: pointer;
  background-size: 50%;
  background-repeat: no-repeat;
  background-position: center;
  grid-column: -1;
  grid-row: 1;
}

@media (hover: hover) {
  .profile__edit-button:hover {
    opacity: 60%;
  }
}

.profile__add-button {
  border: 2px solid #ffffff;
  background-image: url(../images/add.png);
  background-position: center;
  background-repeat: no-repeat;
  background-color: transparent;
  width: 150px;
  height: 50px;
  border-radius: 2px;
  margin: 30px 0 10px 168px;
  cursor: pointer;
}

@media (hover: hover) {
  .profile__add-button:hover {
    opacity: 60%;
  }
}

@media screen and (max-width: 880px) {
  .profile {
    display: flex;
    flex-direction: column;
    margin: auto;
  }

  .profile__avatar {
    display: flex;
    margin: 0 auto 14px;
  }

  .profile__info {
    margin: 0 auto 36px;
    overflow: hidden;
  }

  .profile__edit-button{
    margin: 16px 0 16px 12px;
  }

  .profile__info-description {
    margin: auto;
  }

  .profile__add-button {
    margin: 0 auto 36px;
    width: 282px;
  }
}

@media screen and (max-width: 460px) {
  .profile__info-name {
    font-size: 22px;
    margin: 0 0 14px;
    width: auto;
  }

  .profile__edit-button {
    width: 18px;
    height: 18px;
    margin: 4px 0 10px 12px;
  }

  .profile__info-description {
    font-size: 14px;
  }
}

